--- a/TestEditModeChecker/TestEditModeChecker.csproj
+++ b/TestEditModeChecker/TestEditModeChecker.csproj
@@ -81,11 +81,17 @@
       <HintPath>$(ProgramW6432)\Autodesk\Revit $(RevitVersion)\RevitAPIUI.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="AdWindows">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(ProgramW6432)\Autodesk\Revit $(RevitVersion)\AdWindows.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
@@ -101,6 +107,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EditModeChecker.cs" />
     <Compile Include="RevitMainWindowSearch.cs" />
+    <Compile Include="XElementSerializationExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestEditModeChecker.addin" />
